Added text to Part 2

--- a/Assignment_1_Solution.ipynb
+++ b/Assignment_1_Solution.ipynb
@@ -280,13 +280,14 @@
    "source": [
     "The pearson correlation presents a way of summarizing a scatter plot into a value between -1 and 1, denoting the correlation between two variables. The Pearson Correlation is calculated using the following formula:\n",
     "\n",
-    "$\\rho _{X,Y}={\\frac {\\operatorname {cov} (X,Y)}{\\sigma _{X}\\sigma _{Y}}}$\n",
+    "$\\rho_{xy} = \\frac {\\sum _{i=1}^{n}(x_{i}-{\\bar {x}})(y_{i}-{\\bar {y}})}{{\\sqrt {\\sum _{i=1}^{n}(x_{i}-{\\bar {x}})^{2}}}{\\sqrt {\\sum _{i=1}^{n}(y_{i}-{\\bar {y}})^{2}}}}$ which can be simplified as \n",
+    "$\\rho _{X,Y}={\\frac {\\operatorname {cov} (X,Y)}{\\sigma _{X}\\sigma _{Y}}}$ where $\\bar {y}$ is the mean of y\n",
     "\n",
     "### How it works\n",
-    "Write some text here\n",
+    "The Pearson Correlation can be explained as the normalized meassure of the covariance. The value of the correlation, between -1 and 1, shows which correlation there is between the two variables. If the value is 1, the values lie on a straight line. An increase in the value on the x-axis will lead to an increase on the y-axis. Similarly with -1, an increase on the x-axis will lead to a decrease on the y-axis. With values close to 0, no change will be made when the x-axis is increased.\n",
     "\n",
     "### Where it does not work\n",
-    "An example is Anscombe's quartet"
+    "The Pearson Correlation does not work optimally if there is a lot of noise, as it does not remove outliers. An example where visualization works, but the Pearson Correlation doesn't is Anscombe's Quartet. Here, 4 different data sets have nearly identical values for many different properties, while their actual distributions are vastly different."
    ]
   },
   {
@@ -304,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While a bar chart represents categorical data, a histogram represents quantitative data. E.g. a bar chart can be used to show the number of different types of cars (\"Red cars\", \"Blue cars\" and \"Green Cars\"). A histogram can be used to XXXXX."
+    "While a bar chart represents categorical data, a histogram represents continous, quantitative data. E.g. a bar chart can be used to show the number of different types of cars (\"Red cars\", \"Blue cars\" and \"Green Cars\"). A histogram is often used on a range to show the number of observations."
    ]
   },
   {
@@ -326,7 +327,9 @@
     "\n",
     "$K = 1 + 3.322 \\log N$\n",
     "\n",
-    "Where K is the number of bins and N is the number of observations in a set."
+    "Where K is the number of bins and N is the number of observations in a set. This means that based on the number of observations, the number of bins can be calculated.\n",
+    "\n",
+    "It is important to note that Sturge's rule works better when data is not heavily skewed. Furthermore, it does not perform optimally when given a data set with more than 200 data points, as it leads to over-smoothing."
    ]
   },
   {
@@ -389,6 +392,11 @@
     "df2.reset_index(inplace=True)\n",
     "_ = df2.plot(x='Time', y='Num', lw=0, marker='o', figsize=(8,4))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
