Added text to task 5 of ass 1

--- a/Assignment_1_Solution.ipynb
+++ b/Assignment_1_Solution.ipynb
@@ -667,7 +667,11 @@
     }
    },
    "source": [
-    "## 5.1 Prostitution data"
+    "## 5.1 Prostitution data\n",
+    "\n",
+    "Assuming the spike of prostituion incidents on Thursday 12:00 PM is the sloppy reporting of police officers. Then it could indicate the incidents found place near 12:00 PM on Thursday, or if the reporting found place weeks later, then the spike could be the result of police officers just picking the very middle of the week out of convienince.\n",
+    "\n",
+    "This kind of data-error then creates bias towards Thursday at 12:00 PM, where the majority of those cases should probably have been distributed more evenly across the week. This misconception could result in an overallocation of police ressources on Thursday noon."
    ]
   },
   {
@@ -678,7 +682,13 @@
     }
    },
    "source": [
-    "## 5.2 Recording of timestamps"
+    "## 5.2 Recording of timestamps\n",
+    "\n",
+    "The bias towards reporting the crimes within increments reduces the accuracy of the timestamps.\n",
+    "\n",
+    "Believing un-critically in these timestamps could then create misconceptions about how cases relate to other timely situations. Is the increase/decrease in a category happening the half hour before or after eg. closing of bars, shutdown of public transportation or at the end of normal work hours?\n",
+    "\n",
+    "Reporting in a more frequent interval could probably create stronger hypotheses."
    ]
   },
   {
@@ -689,20 +699,11 @@
     }
    },
    "source": [
-    "## 5.3 Hall of Justice"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\n"
+    "## 5.3 Hall of Justice\n",
+    "\n",
+    "The bias towards reporting crimes as located at the Hall of Justice might come from using the Hall of Justice as a default place of location if no location is given.\n",
+    "\n",
+    "Believing in this bias and creating the misconception, that the Hall of Justice is a hotspot for crimes, could make it a frequent area of police "
    ]
   }
  ],
@@ -722,7 +723,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.5"
   },
   "pycharm": {
    "stem_cell": {
