Added a bit to ex 5

--- a/Assignment_1_Solution.ipynb
+++ b/Assignment_1_Solution.ipynb
@@ -669,9 +669,11 @@
    "source": [
     "## 5.1 Prostitution data\n",
     "\n",
-    "Assuming the spike of prostituion incidents on Thursday 12:00 PM is the sloppy reporting of police officers. Then it could indicate the incidents found place near 12:00 PM on Thursday, or if the reporting found place weeks later, then the spike could be the result of police officers just picking the very middle of the week out of convienince.\n",
+    "By looking at the raw data, we see a significant increase of prostitution cases reported on Thursdays at 12:00 PM. Had we not noticed this and simply acknowledged it as the sploppy reporting of police officers, we would be lead to believe that the majority of prostitiution takes place on Thursdays around noon.  \n",
     "\n",
-    "This kind of data-error then creates bias towards Thursday at 12:00 PM, where the majority of those cases should probably have been distributed more evenly across the week. This misconception could result in an overallocation of police ressources on Thursday noon."
+    "The spike in prostitution cases could simply indicate that the incidents found place near 12:00 PM on Thursdays, or if the reporting found place weeks later, then the spike could just be the result of police officers picking the very middle of the week out of convienince. Either way this would be a misrepresentation of the facts.\n",
+    "\n",
+    "This kind of data-error creates a bias towards Thursday at 12:00 PM, and the majority of those cases should probably have been distributed more evenly across the week. This misconception could result in an overallocation of police ressources on Thursday around noon."
    ]
   },
   {
@@ -684,11 +686,11 @@
    "source": [
     "## 5.2 Recording of timestamps\n",
     "\n",
-    "The bias towards reporting the crimes within increments reduces the accuracy of the timestamps.\n",
+    "Reporting the crimes in whole increments of 10 minutes reduces the accuracy of the timestamps, and therefore also the possiblity for drawing parallels between other events.\n",
     "\n",
-    "Believing un-critically in these timestamps could then create misconceptions about how cases relate to other timely situations. Is the increase/decrease in a category happening the half hour before or after eg. closing of bars, shutdown of public transportation or at the end of normal work hours?\n",
+    "Believing un-critically in these timestamps creates misconceptions about how cases relate to other timely situations, for example whether or not an increase/decrease in a category of crime happens half an hour before or after eg. closing of bars, shutdown of public transportation or at the end of normal work hours.\n",
     "\n",
-    "Reporting in a more frequent interval could probably create stronger hypotheses."
+    "Which brings us to the conclusion, that reporting in a more frequent interval could probably create stronger hypotheses."
    ]
   },
   {
@@ -701,10 +703,17 @@
    "source": [
     "## 5.3 Hall of Justice\n",
     "\n",
-    "The bias towards reporting crimes as located at the Hall of Justice might come from using the Hall of Justice as a default place of location if no location is given.\n",
+    "Reporting crimes as located at the Hall of Justice might stem from using the Hall of Justice as a default place of location if no location is given. \n",
     "\n",
-    "Believing in this bias and creating the misconception, that the Hall of Justice is a hotspot for crimes, could make it a frequent area of police "
+    "Believing in this bias leads to the misconception, that the Hall of Justice is a hotspot for sex offences, could make it a frequent area of stationing ekstra police force, which would lead to the misuse of police resources."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -723,7 +732,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   },
   "pycharm": {
    "stem_cell": {
