--- a/Assignment_1_Solution.ipynb
+++ b/Assignment_1_Solution.ipynb
@@ -654,7 +654,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As seen on the map, the largest concentration of the drug related crimes can be found in the \"Tenderloin\" area. And a quick search also reveals it as a high-crime neighborhood in San Fransisco.\n",
+    "As seen on the map, the largest concentration of the drug related crimes can be found in the \"Tenderloin\" area. And a quick search also reveals it as a high-crime neighbourhood in San Francisco.\n",
     "https://en.wikipedia.org/wiki/Tenderloin%2C_San_Francisco#Crime"
    ]
   },
@@ -682,11 +682,11 @@
    "source": [
     "## 5.1 Prostitution data\n",
     "\n",
-    "By looking at the raw data, we see a significant increase of prostitution cases reported on Thursdays at 12:00 PM. Had we not noticed this and simply acknowledged it as the sloppy reporting of police officers, we would be led to believe that the majority of prostitiution takes place on Thursdays around noon.  \n",
+    "By looking at the raw data, we see a significant increase of prostitution cases reported on Thursdays at 12:00 PM. Had we not noticed this and simply acknowledged it as the sloppy reporting of police officers, we would be led to believe that the majority of prostitution takes place on Thursdays around noon.  \n",
     "\n",
-    "The spike in prostitution cases could simply indicate that the incidents found place near 12:00 PM on Thursdays, or if the reporting found place weeks later, then the spike could just be the result of police officers picking the very middle of the week out of convienince. Either way this would be a misrepresentation of the facts.\n",
+    "The spike in prostitution cases could simply indicate that the incidents found place near 12:00 PM on Thursdays, or if the reporting found place weeks later, then the spike could just be the result of police officers picking the very middle of the week out of convenience. Either way this would be a misrepresentation of the facts.\n",
     "\n",
-    "This kind of data-error creates a bias towards Thursday at 12:00 PM, and the majority of those cases should probably have been distributed more evenly across the week. This misconception could result in an overallocation of police ressources on Thursday around noon."
+    "This kind of data-error creates a bias towards Thursday at 12:00 PM, and the majority of those cases should probably have been distributed more evenly across the week. This misconception could result in an overallocation of police resources on Thursday around noon."
    ]
   },
   {
@@ -699,7 +699,7 @@
    "source": [
     "## 5.2 Recording of timestamps\n",
     "\n",
-    "Reporting the crimes in whole increments of 10 minutes reduces the accuracy of the timestamps, and therefore also the possiblity for drawing parallels between other events.\n",
+    "Reporting the crimes in whole increments of 10 minutes reduces the accuracy of the timestamps, and therefore also the possibility for drawing parallels between other events.\n",
     "\n",
     "Believing un-critically in these timestamps creates misconceptions about how cases relate to other timely situations, for example whether or not an increase/decrease in a category of crime happens half an hour before or after eg. closing of bars, shutdown of public transportation or at the end of normal work hours.\n",
     "\n",
@@ -718,7 +718,7 @@
     "\n",
     "Reporting crimes as located at the Hall of Justice might stem from using the Hall of Justice as a default place of location if no location is given. \n",
     "\n",
-    "Believing in this bias leads to the misconception, that the Hall of Justice is a hotspot for sex offences, could make it a frequent area of stationing ekstra police force, which would lead to the misuse of police resources."
+    "Believing in this bias leads to the misconception, that the Hall of Justice is a hotspot for sex offences, could make it a frequent area of stationing extra police force, which would lead to the misuse of police resources."
    ]
   }
  ],
@@ -738,7 +738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
   },
   "pycharm": {
    "stem_cell": {
