Part 2A and Part 2B. Remeber to download weather data

--- a/Assignment_2_Solution.ipynb
+++ b/Assignment_2_Solution.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "personalized-casting",
    "metadata": {},
@@ -86,6 +85,367 @@
     "  - Report accuracy. \n",
     "  - Discuss how the model performance changes relative to the version with no weather data.\n",
     "  - Discuss what you have learned about crime from including weather data in your model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "valuable-fitness",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "raw_crimes = pd.read_csv(\"Police_Department_Incident_Reports__Historical_2003_to_May_2018.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "light-static",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np \n",
+    "from datetime import datetime\n",
+    "\n",
+    "focuscrimes = [\"BURGLARY\", \"FRAUD\"]\n",
+    "\n",
+    "crimes = raw_crimes[raw_crimes[\"Category\"].isin(focuscrimes)].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "mechanical-mobility",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Features\n",
+    "cat = \"category\"\n",
+    "dt = \"datetime\"\n",
+    "year = \"year\"\n",
+    "month = \"month\"\n",
+    "day = \"day\"\n",
+    "hour = \"hour\"\n",
+    "hour_of_month = \"hour_of_month\"\n",
+    "hour_of_week = \"hour_of_week\"\n",
+    "day_of_week = \"dayofweek\"\n",
+    "pddistrict = \"pddistrict\"\n",
+    "\n",
+    "crimes.columns = crimes.columns.str.lower()\n",
+    "crimes[dt] = pd.to_datetime(crimes[\"date\"] + \" \" + crimes[\"time\"])\n",
+    "\n",
+    "crimes[year] = crimes[dt].dt.year\n",
+    "crimes[month] = crimes[dt].dt.month\n",
+    "crimes[day] = crimes[dt].dt.day\n",
+    "crimes[hour] = crimes[dt].dt.hour\n",
+    "\n",
+    "crimes[hour_of_month] = crimes.apply(lambda row: row[dt].day * 24 + row[hour], axis=1)\n",
+    "crimes[hour_of_week] = crimes.apply(lambda row: row[dt].dayofweek * 24 + row[hour], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "serious-cutting",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(35912, 42)\n",
+      "(16703, 42)\n"
+     ]
+    }
+   ],
+   "source": [
+    "crimes_in_range = crimes[crimes[year].between(2012, 2017, inclusive=True)]\n",
+    "burglary = crimes_in_range[crimes_in_range[cat].isin([focuscrimes[0]])]\n",
+    "fraud = crimes_in_range[crimes_in_range[cat].isin([focuscrimes[1]])]\n",
+    "\n",
+    "print(burglary.shape)\n",
+    "print(fraud.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "painful-greensboro",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_size = 15000\n",
+    "\n",
+    "# Create balanced data set\n",
+    "type1 = burglary.sample(sample_size)\n",
+    "type2 = fraud.sample(sample_size)\n",
+    "\n",
+    "crime_df = pd.concat([type1, type2], ignore_index=True).copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "invisible-implementation",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Features Shape: (22500, 19)\n",
+      "Training Labels Shape: (22500,)\n",
+      "Testing Features Shape: (7500, 19)\n",
+      "Testing Labels Shape: (7500,)\n",
+      "\n",
+      "\n",
+      "Average Tree Depth: 29.97\n",
+      "Train\n",
+      "- Mean Absolute Error: 0.17 degrees.\n",
+      "- Accuracy:  83.0 %\n",
+      "Test\n",
+      "- Mean Absolute Error: 0.42 degrees.\n",
+      "- TeAccuracy:  57.99999999999999 %\n",
+      "\n",
+      "Max Depth 3\n",
+      "Train\n",
+      "- Mean Absolute Error: 0.4 degrees.\n",
+      "- Accuracy:  60.0 %\n",
+      "Test\n",
+      "- Mean Absolute Error: 0.4 degrees.\n",
+      "- Accuracy:  60.0 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "crime_features = [cat, day_of_week, month, hour, pddistrict]\n",
+    "crime_dummies = [day_of_week, pddistrict]\n",
+    "\n",
+    "# Let's make the crime features\n",
+    "Xc = crime_df[crime_features].copy()\n",
+    "\n",
+    "from sklearn import preprocessing\n",
+    "\n",
+    "le = preprocessing.LabelEncoder()\n",
+    "Xc[cat] = le.fit_transform(Xc[cat])\n",
+    "\n",
+    "# One-hot encode the categorical data\n",
+    "Xc = pd.get_dummies(Xc, columns=crime_dummies)\n",
+    "\n",
+    "# Labels will be the values we want to predict\n",
+    "yc = np.array(Xc[cat])\n",
+    "\n",
+    "# We remove the labels from the crime dataframe to get all the values we need for the features\n",
+    "Xc = Xc.drop(cat, axis=1)\n",
+    "\n",
+    "# We save the feature names for later\n",
+    "Xc_list = list(Xc.columns)\n",
+    "\n",
+    "# Convert the dataframe to a numpy array so we can work with the features\n",
+    "Xc = np.array(Xc)\n",
+    "\n",
+    "# Using Skicit-learn to split data into training and testing sets\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "Xc_train, Xc_test, yc_train, yc_test = train_test_split(Xc, yc, test_size = 0.25, random_state = 42)\n",
+    "\n",
+    "print('Training Features Shape:', Xc_train.shape)\n",
+    "print('Training Labels Shape:', yc_train.shape)\n",
+    "print('Testing Features Shape:', Xc_test.shape)\n",
+    "print('Testing Labels Shape:', yc_test.shape)\n",
+    "print('\\n')\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "cclf_max = RandomForestClassifier(n_estimators=99, random_state=42)\n",
+    "cclf_max.fit(Xc_train, yc_train)\n",
+    "\n",
+    "print(\"Average Tree Depth:\", round(np.mean([estimator.get_depth() for estimator in cclf_max.estimators_]), 2))\n",
+    "\n",
+    "ctrain_pred = cclf_max.predict(Xc_train)\n",
+    "print(\"Train\")\n",
+    "print('- Mean Absolute Error:', round(mean_absolute_error(yc_train, ctrain_pred), 2), 'degrees.')\n",
+    "print(\"- Accuracy: \", 100 * round(cclf_max.score(Xc_train, yc_train), 2), \"%\")\n",
+    "\n",
+    "ctest_pred = cclf_max.predict(Xc_test)\n",
+    "print(\"Test\")\n",
+    "print('- Mean Absolute Error:', round(mean_absolute_error(yc_test, ctest_pred), 2), 'degrees.')\n",
+    "print(\"- TeAccuracy: \", 100 * round(cclf_max.score(Xc_test, yc_test), 2), \"%\\n\")\n",
+    "\n",
+    "\n",
+    "cclf = RandomForestClassifier(n_estimators=99, random_state=42, max_depth=3)\n",
+    "cclf.fit(Xc_train, yc_train)\n",
+    "\n",
+    "print(\"Max Depth 3\")\n",
+    "\n",
+    "ctrain_pred = cclf.predict(Xc_train)\n",
+    "print(\"Train\")\n",
+    "print('- Mean Absolute Error:', round(mean_absolute_error(yc_train, ctrain_pred), 2), 'degrees.')\n",
+    "print(\"- Accuracy: \", 100 * round(cclf.score(Xc_train, yc_train), 2), \"%\")\n",
+    "\n",
+    "ctest_pred = cclf.predict(Xc_test)\n",
+    "print(\"Test\")\n",
+    "print('- Mean Absolute Error:', round(mean_absolute_error(yc_test, ctest_pred), 2), 'degrees.')\n",
+    "\n",
+    "# Crime accuracy\n",
+    "cacc = cclf.score(Xc_test, yc_test) \n",
+    "print(\"- Accuracy: \", 100 * round(cacc, 2), \"%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "polish-investigation",
+   "metadata": {},
+   "source": [
+    "## Part 2A\n",
+    "\n",
+    "**Did you balance the training data? What are the pros/cons of balancing?**\n",
+    "\n",
+    "The dataset is balanced with 20000 randomly picked samples from each crime category, as to ensure the crime are distributed equally over time with no favor of one over the other.\n",
+    "\n",
+    "**Do you think your model is overfitting?**\n",
+    "\n",
+    "Initially where the classifier had no maximum depth, the training accuracy was near 89% where test accuracy was at 52-53%. Together with a avg. tree depth of around 45 of a dataset with 18 feautures, it seems safe to assume that the model was overfitting, as it clearly shows it did not generalize well from the training data to the testing data.\n",
+    "\n",
+    "However, with a maximum depth of 3, a higher accuracy is reached but with a drastical smaller tree size, which could indicate a better fitted model.\n",
+    "\n",
+    "**Did you choose to do cross-validation?**\n",
+    "\n",
+    "To error estimate the classifier, the Holdout Method is used by creating training and testing/validation datasets. The testing datasets are then used to calculate the mean accuracy of the classifier.\n",
+    "\n",
+    "**Which specific features did you end up using? Why?**\n",
+    "\n",
+    "The features used are \"DayOfWeek\", \"Date\", \"Time\", and \"PdDistrict\", because they tell something about the time and place of the crime.\n",
+    "\n",
+    "**Which features (if any) did you one-hot encode? Why ... or why not?))**\n",
+    "\n",
+    "The features to be one-hot encoded was \"DayOfWeek\" and \"PdDistrict\", where the crime category was just label encoded. Both \"DayOfWeek\" and \"PdDistrict\" includes categorical variables that should be converted to binary data which the machine can understand without preferring one over the other, why Pandas' get_dummies function is used.\n",
+    "\n",
+    "Because the crime category is what should be predicted, these are not converted to binary data, but are just given a numeric representation using Sklearn's LabelEncoder.\n",
+    "\n",
+    "The \"Date\" and \"Time\" features are also kind of included. When the raw crime data is loaded into a dataframe, the columns are just treated as strings. We want to use them to determine how time influceses the crimes. To make the machine understand this, however, the columns are merged together to a datetime column \"Date_Time\" where the dates are converted to their ordinal numeric values.\n",
+    "At the time this seemed smart, but after doing some thinking, it would probably have been better to split the date times up into something like; year, month, day, hour, minute or something, as humans, and therefor crimes, follow more patterns of our gregorian calendar rather than a UNIX timestamp...\n",
+    "\n",
+    "**Report accuracy. Discuss the model performance.**\n",
+    "\n",
+    "Well, the accuracy is around 57% for the Random Forest classifier, an 14 % better accuracy of the baseline of 50/50. This is probably not good enough for any practical application."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "coordinated-lafayette",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weather = pd.read_csv(\"weather_data.csv\")\n",
+    "\n",
+    "# Format date and time for easy processing and training\n",
+    "weather[dt] = pd.to_datetime(weather[\"date\"])\n",
+    "weather[year] = weather[dt].dt.year\n",
+    "weather[month] = weather[dt].dt.month\n",
+    "weather[day] = weather[dt].dt.day\n",
+    "weather[hour] = weather[dt].dt.hour\n",
+    "\n",
+    "weather[hour_of_month] = weather.apply(lambda row: row[dt].day * 24 + row[hour], axis=1)\n",
+    "weather[hour_of_week] = weather.apply(lambda row: row[dt].dayofweek * 24 + row[hour], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "reverse-value",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test\n",
+      "- Mean Absolute Error: 0.37 degrees.\n",
+      "- Accuracy:  63.0 %\n",
+      "\n",
+      "0.63 0.6 1.05\n",
+      "Using weather data, the predictions become 5.0 % better\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's merge the weather and crime dataframes together!\n",
+    "\n",
+    "merged_df = pd.merge(crime_df, weather, how=\"left\", on=[year, month, day, hour, hour_of_month, hour_of_week])\n",
+    "merged_df.dropna()\n",
+    "\n",
+    "weather_features = [\"weather\", \"humidity\", \"temperature\", \"pressure\", \"wind_speed\"]\n",
+    "weather_dummies = [\"weather\"]\n",
+    "\n",
+    "concatted_features = np.concatenate([weather_features, crime_features])\n",
+    "concatted_dummies = np.concatenate([weather_dummies, crime_dummies])\n",
+    "\n",
+    "Xwc = merged_df[concatted_features].copy()\n",
+    "Xwc = Xwc.dropna()\n",
+    "\n",
+    "# Label encode the categories\n",
+    "Xwc[cat] = le.fit_transform(Xwc[cat])\n",
+    "\n",
+    "# One-hot encode the categorical data\n",
+    "Xwc = pd.get_dummies(Xwc, columns=concatted_dummies)\n",
+    "\n",
+    "# Labels will be the values we want to predict\n",
+    "ywc = np.array(Xwc[cat])\n",
+    "\n",
+    "# We remove the labels from the crime dataframe to get all the values we need for the features\n",
+    "Xwc = Xwc.drop(cat, axis=1)\n",
+    "\n",
+    "# We save the feature names for later\n",
+    "Xwc_list = list(Xwc.columns)\n",
+    "\n",
+    "# Convert the dataframe to a numpy array so we can work with the features\n",
+    "Xwc = np.array(Xwc)\n",
+    "\n",
+    "# Using Skicit-learn to split data into training and testing sets\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "Xwc_train, Xwc_test, ywc_train, ywc_test = train_test_split(Xwc, ywc, test_size = 0.25, random_state = 42)\n",
+    "\n",
+    "clf = RandomForestClassifier(n_estimators=99, random_state=42, max_depth=7)\n",
+    "clf.fit(Xwc_train, ywc_train)\n",
+    "\n",
+    "preds = clf.predict(Xwc_test)\n",
+    "print(\"Test\")\n",
+    "print('- Mean Absolute Error:', round(mean_absolute_error(ywc_test, preds), 2), 'degrees.')\n",
+    "\n",
+    "# Weatherd crime accuracy\n",
+    "wcacc = clf.score(Xwc_test, ywc_test)\n",
+    "print(\"- Accuracy: \", 100 * round(wcacc, 2), \"%\\n\")\n",
+    "\n",
+    "print(\"Using weather data, the predictions become\", round(((wcacc / cacc) - 1) * 100, 2), \"% better\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "automated-newark",
+   "metadata": {},
+   "source": [
+    "## Part 2B\n",
+    "\n",
+    "**Report accuracy**\n",
+    "\n",
+    "Well, the accuracy haven't really improved much.\n",
+    "\n",
+    "**Discuss how the model performance changes relative to the version with no weather data**\n",
+    "\n",
+    "Not much?\n",
+    "\n",
+    "**Discuss what you have learned about crime from including weather data in your model**\n",
+    "\n",
+    "That weather is probably not a good indicator for predicting crimes."
    ]
   },
   {
@@ -888,7 +1248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
