Updated some texts for part 2

--- a/Assignment_2_Solution.ipynb
+++ b/Assignment_2_Solution.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "### What is your favorite visualization among the examples in section 3? Explain why in a few words.\n",
     "\n",
-    "My favorite visualization from section 3, is “Gapminder Human Development Trends”. The data is presented in a clear way and does not become unmanageable or confusing. The visualizations cover different sections of the presentation and are split into multiple screens, which can all accessed by using the progress bar. For each section, the user is guided through the visualization and important key observations are made clear by using annotations, highlighting and animated transitions. Furthermore, the user also has the freedom to stop and take a look around for themselves and inspect more specific observations by using the timeline or details-on-demand functionalities. \n",
+    "Our favorite visualization from section 3, is “Gapminder Human Development Trends”. The data is presented in a clear way and does not become unmanageable or confusing. The visualizations cover different sections of the presentation and are split into multiple screens, which can all accessed by using the progress bar. For each section, the user is guided through the visualization and important key observations are made clear by using annotations, highlighting and animated transitions. Furthermore, the user also has the freedom to stop and take a look around for themselves and inspect more specific observations by using the timeline or details-on-demand functionalities. \n",
     "\n",
     "### What's the point of Figure 7?\n",
     "\n",
@@ -233,6 +233,7 @@
     "# Let's make the crime features\n",
     "Xc = crime_df[crime_features].copy()\n",
     "\n",
+    "# Label encode the categories\n",
     "from sklearn import preprocessing\n",
     "\n",
     "le = preprocessing.LabelEncoder()\n",
@@ -241,10 +242,10 @@
     "# One-hot encode the categorical data\n",
     "Xc = pd.get_dummies(Xc, columns=crime_dummies)\n",
     "\n",
-    "# Labels will be the values we want to predict\n",
+    "# y will be the values we want to predict for the crimes\n",
     "yc = np.array(Xc[cat])\n",
     "\n",
-    "# We remove the labels from the crime dataframe to get all the values we need for the features\n",
+    "# We remove the values we want to predict from the crime dataframe to get all the values we need for the features\n",
     "Xc = Xc.drop(cat, axis=1)\n",
     "\n",
     "# We save the feature names for later\n",
@@ -312,11 +313,11 @@
     "\n",
     "**Did you balance the training data? What are the pros/cons of balancing?**\n",
     "\n",
-    "The dataset is balanced with 20000 randomly picked samples from each crime category, as to ensure the crime are distributed equally over time with no favor of one over the other.\n",
+    "The dataset is balanced with 15000 randomly picked samples from each crime type, as to ensure the crime are distributed equally over time with no favor of one over the other.\n",
     "\n",
     "**Do you think your model is overfitting?**\n",
     "\n",
-    "Initially where the classifier had no maximum depth, the training accuracy was near 89% where test accuracy was at 52-53%. Together with a avg. tree depth of around 45 of a dataset with 18 feautures, it seems safe to assume that the model was overfitting, as it clearly shows it did not generalize well from the training data to the testing data.\n",
+    "Initially where the classifier had no maximum depth, the training accuracy was at 80%+ where test accuracy was around 50%. With an avgerage tree depth of around 30+ of a dataset with 19 feautures, it seems safe to assume that the model was overfitting, as it clearly shows it did not generalize well from the training data to the testing data.\n",
     "\n",
     "However, with a maximum depth of 3, a higher accuracy is reached but with a drastical smaller tree size, which could indicate a better fitted model.\n",
     "\n",
@@ -326,7 +327,7 @@
     "\n",
     "**Which specific features did you end up using? Why?**\n",
     "\n",
-    "The features used are \"DayOfWeek\", \"Date\", \"Time\", and \"PdDistrict\", because they tell something about the time and place of the crime.\n",
+    "The features used are; day of the week, month, hour, and PdDistrict, because they tell something about the time and place of the crime. Which could give an indication of which type of crime is in question.\n",
     "\n",
     "**Which features (if any) did you one-hot encode? Why ... or why not?))**\n",
     "\n",
@@ -334,12 +335,9 @@
     "\n",
     "Because the crime category is what should be predicted, these are not converted to binary data, but are just given a numeric representation using Sklearn's LabelEncoder.\n",
     "\n",
-    "The \"Date\" and \"Time\" features are also kind of included. When the raw crime data is loaded into a dataframe, the columns are just treated as strings. We want to use them to determine how time influceses the crimes. To make the machine understand this, however, the columns are merged together to a datetime column \"Date_Time\" where the dates are converted to their ordinal numeric values.\n",
-    "At the time this seemed smart, but after doing some thinking, it would probably have been better to split the date times up into something like; year, month, day, hour, minute or something, as humans, and therefore crimes, follow more patterns of our gregorian calendar rather than a UNIX timestamp...\n",
-    "\n",
     "**Report accuracy. Discuss the model performance.**\n",
     "\n",
-    "Well, the accuracy is around 57% for the Random Forest classifier, an 14 % better accuracy of the baseline of 50/50. This is probably not good enough for any practical application."
+    "Well, the accuracy is around 60% for the Random Forest classifier, an 20 % better accuracy of the baseline of 50/50. This is, however, probably not good enough for any practical application."
    ]
   },
   {
@@ -446,11 +444,11 @@
     "\n",
     "**Discuss how the model performance changes relative to the version with no weather data**\n",
     "\n",
-    "Not much, between 3 and 5 percentage points.\n",
+    "Not much, around 5 percentage points.\n",
     "\n",
     "**Discuss what you have learned about crime from including weather data in your model**\n",
     "\n",
-    "That weather is probably not a good indicator for predicting crimes. Especially burglary might not be the best fit, as it"
+    "As the prediction accuracy have only slighly increased, this indicates that weather is probably not a good indicator for predicting crimes. However, with at less noisy dataset with a focus on the features of importance maybe some better correlations can be found."
    ]
   },
   {
@@ -1020,7 +1018,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
