--- a/Assignment_2_Solution.ipynb
+++ b/Assignment_2_Solution.ipynb
@@ -1002,6 +1002,14 @@
     "p.yaxis.formatter = NumeralTickFormatter(format='0 %')\n",
     "show(p)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "posted-accommodation",
+   "metadata": {},
+   "source": [
+    "![GIF](images/bokeh.gif \"gif\")"
+   ]
   }
  ],
  "metadata": {
