Added some text

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -65,6 +65,9 @@
     "Explain the visualizations you've chosen.\n",
     "Why are they right for the story you want to tell? -->\n",
     "\n",
+    "Sometimes there is only a specific number that needs communicating. Instead of using graphs and charts, using the number directly puts more focus on the number and removes any clutter there else could be if other kinds of visualizations was used.\n",
+    "For plotting continous data, line graphs are used, as the line that connects the points are physically connected implying a connection.\n",
+    "\n",
     "### Discussion\n",
     "<!-- Think critically about your creation\n",
     "\n",
